UTF-8 für strings.properties + Strings update

--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -5,6 +5,7 @@ chooser.formats.FLACI=FLACI file
 chooser.formats.JSON=JSON file
 chooser.openJFLAP=Open JFLAP file
 chooser.saveJFF=Save JFLAP file
+chooser.saveFLACI=Save FLACI file
 chooser.saveScript=Save script
 error.noFile=No file chosen!
 ui.browse=Browse
