--- a/src/main/resources/strings_de.properties
+++ b/src/main/resources/strings_de.properties
@@ -3,11 +3,11 @@ chooser.formats.TXT=Textdatei
 chooser.formats.XML=XML-Datei
 chooser.formats.FLACI=FLACI-Datei
 chooser.formats.JSON=JSON-Datei
-chooser.openJFLAP=Datei Ã¶ffnen
+chooser.openJFLAP=JFLAP-Datei öffnen
 chooser.saveJFF=JFLAP-Datei speichern
 chooser.saveFLACI=FLACI-Datei speichern
 chooser.saveScript=Skript speichern
-error.noFile=Keine Datei ausgewÃ¤hlt!
+error.noFile=Keine Datei ausgewählt!
 ui.browse=Durchsuchen
 ui.convert=In Skript konvertieren
 ui.jffPath=Dateipfad
